--- a/index.html
+++ b/index.html
@@ -52,36 +52,16 @@
   <div class="container">
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Dedeg%C3%B6l_Da%C4%9F%C4%B1.jpg/1280px-Dedeg%C3%B6l_Da%C4%9F%C4%B1.jpg" alt="Dedegöl Dağı" />
+      <img src="" alt="Karagöl" />
       <div class="place-content">
         <h2>Dedegöl Dağı</h2>
-        <p>Yenişarbademli’nin kuzeydoğusunda yer alan Dedegöl Dağı, dağcılık ve doğa yürüyüşü meraklıları için popüler bir rotadır. Manzara nefes kesicidir.</p>
+        <p>Yenişarbademli’nin batısında yer alan Dedegöl Dağının eteklerinde bulunan karagöl.</p>
       </div>
     </div>
 
-    <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Pınargözü_mağarası.jpg/1024px-Pınargözü_mağarası.jpg" alt="Pınargözü Mağarası" />
-      <div class="place-content">
-        <h2>Pınargözü Mağarası</h2>
-        <p>Türkiye’nin en uzun mağarası olarak bilinen Pınargözü Mağarası, bol su kaynakları ve mistik atmosferiyle doğaseverleri cezbeder.</p>
-      </div>
-    </div>
+ 
 
-    <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Beyşehir_Gölü.jpg/1280px-Beyşehir_Gölü.jpg" alt="Beyşehir Gölü" />
-      <div class="place-content">
-        <h2>Beyşehir Gölü</h2>
-        <p>Yenişarbademli’ye oldukça yakın olan Beyşehir Gölü, tekne turları, balıkçılık ve gün batımı manzaralarıyla ünlüdür.</p>
-      </div>
-    </div>
-
-    <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Anamas_Dağları.jpg/1280px-Anamas_Dağları.jpg" alt="Anamas Dağları" />
-      <div class="place-content">
-        <h2>Anamas Dağları</h2>
-        <p>Yürüyüş, kamp ve kuş gözlemi için harika bir ortam sunan Anamas Dağları, doğal yaşamın kalbinde huzur arayanlar için birebirdir.</p>
-      </div>
-    </div>
+    
 
   </div>
 </body>
