--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
 
     <div class="place">
-      <img src="" alt="Karagöl" />
+      <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
       <div class="place-content">
         <h2>Dedegöl Dağı</h2>
         <p>Yenişarbademli’nin batısında yer alan Dedegöl Dağının eteklerinde bulunan karagöl.</p>
