--- a/index.html
+++ b/index.html
@@ -51,13 +51,21 @@
 
   <div class="container">
 
-    <div class="place">
-      <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
-      <div class="place-content">
-        <h2>Dedegöl Dağı</h2>
-        <p>Yenişarbademli’nin batısında yer alan Dedegöl Dağının eteklerinde bulunan karagöl.</p>
-      </div>
-    </div>
+  <div class="place">
+  <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
+  <div class="place-content">
+    <h2>
+      <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="text-decoration: none; color: inherit;">
+        Karagöl 📍
+      </a>
+    </h2>
+    <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
+    <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="display:inline-block; margin-top:10px; background:#004d40; color:white; padding:8px 12px; border-radius:5px; text-decoration:none;">
+      📍 Konumu Görüntüle
+    </a>
+  </div>
+</div>
+
 
  
 
