--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         Karagöl 📍
       </a>
     </h2>
-    <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
-    <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="display:inline-block; margin-top:10px; background:#004d40; color:white; padding:8px 12px; border-radius:5px; text-decoration:none;">
+    <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl</p>
+    <a href="https://maps.app.goo.gl/16ExXNUc7JigAS1Q7" target="_blank" style="display:inline-block; margin-top:10px; background:#004d40; color:white; padding:8px 12px; border-radius:5px; text-decoration:none;">
       📍 Konumu Görüntüle
     </a>
   </div>
