--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     .place h2 {
       margin-top: 0;
     }
+    .map-link {
+      display: inline-block;
+      margin-top: 10px;
+      background: #004d40;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
     @media (max-width: 600px) {
       .place img {
         height: auto;
@@ -51,28 +60,19 @@
 
   <div class="container">
 
- <div class="place">
-  <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
-  <div class="place-content">
-    <h2>
-      <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="text-decoration: none; color: inherit;">
-        Karagöl 📍
-      </a>
-    </h2>
-    <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
-    <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="display:inline-block; margin-top:10px; background:#004d40; color:white; padding:8px 12px; border-radius:5px; text-decoration:none;">
-      📍 Konumu Görüntüle
-    </a>
-  </div>
-</div>
-
-
+    <div class="place">
+      <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
+      <div class="place-content">
+        <h2>
+          <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="text-decoration: none; color: inherit;">
+            Karagöl 📍
+          </a>
+        </h2>
+        <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
+        <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" class="map-link">
+          📍 Konumu Görüntüle
+        </a>
 
  
 
     
-
-  </div>
-</body>
-</html>
-
