--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
       <div class="place-content">
         <h2>
-          <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="text-decoration: none; color: inherit;">
+          <a href="https://maps.app.goo.gl/16ExXNUc7JigAS1Q7" target="_blank" style="text-decoration: none; color: inherit;">
             Karagöl 📍
           </a>
         </h2>
-        <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
+        <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl</p>
         <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" class="map-link">
           📍 Konumu Görüntüle
         </a>
