--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
       <div class="place-content">
         <h2>
-          <a href="https://maps.app.goo.gl/16ExXNUc7JigAS1Q7" target="_blank" style="text-decoration: none; color: inherit;">
+          <a href="https://maps.app.goo.gl/KYb5BCnYZCdzKhvx8" target="_blank" style="text-decoration: none; color: inherit;">
             Karagöl 📍
           </a>
         </h2>
