--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
   <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
   <div class="place-content">
     <h2>
-      <a href="https://www.google.com/maps/place//@37.642831,31.305098,705m/data=!3m1!1e3!4m6!1m5!3m4!2zMzfCsDM4JzM0LjIiTiAzMcKwMTgnMTguNCJF!8m2!3d37.642831!4d31.305098?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank" style="text-decoration: none; color: inherit;">
+      <a href="https://www.google.com/maps?q=37.642831,31.305098" target="_blank" style="text-decoration: none; color: inherit;">
         Karagöl 📍
       </a>
     </h2>
     <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
-    <a href="https://www.google.com/maps/place//@37.642831,31.305098,705m/data=!3m1!1e3!4m6!1m5!3m4!2zMzfCsDM4JzM0LjIiTiAzMcKwMTgnMTguNCJF!8m2!3d37.642831!4d31.305098?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="map-link">
+    <a href="https://www.google.com/maps?q=37.642831,31.305098" target="_blank" class="map-link">
       📍 Konumu Görüntüle
     </a>
   </div>
 </div>
+
 
 
  
