--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <header>
-    <h1>Yenişarbademli ve Çevresindeki Turistik Yerler</h1>
+    <h1>NewShire</h1>
   </header>
 
   <div class="container">
@@ -65,10 +65,10 @@
   <div class="place-content">
     <h2>
       <a href="https://www.google.com/maps?q=37.642831,31.305098" target="_blank" style="text-decoration: none; color: inherit;">
-        Karagöl 📍
+        Mordor 📍
       </a>
     </h2>
-    <p>Dedegöl Dağı’nın eteklerinde yer alan Karagöl, berrak suyu ve dağ manzarasıyla doğa tutkunları için ideal bir mesire alanıdır.</p>
+    <p>Memo Selo ve arkadaşlarının daimi meskeni</p>
     <a href="https://www.google.com/maps?q=37.642831,31.305098" target="_blank" class="map-link">
       📍 Konumu Görüntüle
     </a>
