--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="container">
 
 <div class="place">
-  <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Karagöl" />
+  <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/karagol.jpg?raw=true" alt="Mordor" />
   <div class="place-content">
     <h2>
       <a href="https://www.google.com/maps?q=37.642831,31.305098" target="_blank" style="text-decoration: none; color: inherit;">
@@ -75,6 +75,20 @@
   </div>
 </div>
 
+<div class="place">
+  <img src="https://github.com/Bayraksea/yenisarturistik/blob/main/Kap%C4%B1.jpg?raw=true" alt="MinasTirith Main Gate" />
+  <div class="place-content">
+    <h2>
+      <a href="https://maps.app.goo.gl/SURziup4BPM6q8Eu8" target="_blank" style="text-decoration: none; color: inherit;">
+        MinasTirith Main Gate 📍
+      </a>
+    </h2>
+    <p>Mordorun kara kapısı değil GriGüllü'nün kapısı</p>
+    <a href="https://maps.app.goo.gl/SURziup4BPM6q8Eu8" target="_blank" class="map-link">
+      📍 Konumu Görüntüle
+    </a>
+  </div>
+</div>
 
 
  
