--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Yenişarbademli Turistik Yerler</title>
+  <title>Yenişar Demo</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -83,7 +83,7 @@
         MinasTirith Main Gate 📍
       </a>
     </h2>
-    <p>Mordorun kara kapısı değil GriGüllü'nün kapısı</p>
+    <p>Selonun memleketi olan muhteşem başketin en az onun kadar muhteşem olan kapısı</p>
     <a href="https://maps.app.goo.gl/SURziup4BPM6q8Eu8" target="_blank" class="map-link">
       📍 Konumu Görüntüle
     </a>
