--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         MinasTirith Main Gate 📍
       </a>
     </h2>
-    <p>Selonun memleketi olan muhteşem başketin en az onun kadar muhteşem olan kapısı</p>
+    <p>Selonun memleketi olan muhteşem başkentin en az onun kadar muhteşem olan kapısı</p>
     <a href="https://maps.app.goo.gl/SURziup4BPM6q8Eu8" target="_blank" class="map-link">
       📍 Konumu Görüntüle
     </a>
